fix scrollbar color

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 // Scroll bar colors
 $scroll-background-color: #e2e4e9;
 $scroll-bar-color: #c6cad2;
-$scrollbar-bar-hover: #9fa3ad;
+$scroll-bar-hover: #9fa3ad;
 
 // Content colors
