--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,11 +52,11 @@ header {
     border-radius: .5rem;
 }
 
-::-webkit-scrollbar-bar{
+::-webkit-scrollbar-thumb{
     background-color: $scroll-bar-color;
     border-radius: .5rem;   
 }
 
-::-webkit-scrollbar-bar:hover{
-    background-color: $scrollbar-bar-hover;
+::-webkit-scrollbar-thumb:hover{
+    background-color: $scroll-bar-hover;
 }
